child's objects move if change their origin position #66526

Closed
opened 2019-07-07 14:07:02 +02:00 by Ivan Vostrikov · 9 comments

Set_Origin_Bug.blend
System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce 920M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 416.81

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-05 16:36, hash: 699193713f
Worked: 2.79b

Short description of error
If change origin position for object with parent, this object (and his childer) will be moved.

Exact steps for others to reproduce the error

  • Open "Set_Origin_Bug.blend"
  • Select All
  • RMB -> Set Origin -> Origin to 3D Cursor
[Set_Origin_Bug.blend](https://archive.blender.org/developer/F7571690/Set_Origin_Bug.blend) **System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce 920M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 416.81 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-05 16:36, hash: `699193713f` Worked: 2.79b **Short description of error** If change origin position for object with parent, this object (and his childer) will be moved. **Exact steps for others to reproduce the error** - Open "Set_Origin_Bug.blend" - Select All - RMB -> Set Origin -> Origin to 3D Cursor
Author

Added subscriber: @IvanVostrikov

Added subscriber: @IvanVostrikov
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, checking...

Confirmed, checking...
Sergey Sharybin was assigned by Philipp Oeser 2019-07-08 12:24:11 +02:00
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

This is one of those cases where we are doing something to a hierarchy and it would be preferred to do this all in evaluated domain?
Seems like we need to do something similar to 26d4a2a516 in object_origin_set_exec as well

Object *ob_eval = DEG_get_evaluated_object(depsgraph, ob);
BKE_object_transform_copy(ob_eval, ob);

BKE_object_where_is_calc(depsgraph, scene, ob_eval);
if (ob->type == OB_ARMATURE) {
  /* needed for bone parents */
  BKE_pose_where_is(depsgraph, scene, ob_eval);
}

but since that seems to be failing for nested relationships (see #66525) I think it makes sense if @Sergey squashes this nastyness for this report as well?
(@Sergey: feel free to bounce back -- I just think you will kill it faster....)

This is one of those cases where we are doing something to a hierarchy and it would be preferred to do this all in evaluated domain? Seems like we need to do something similar to 26d4a2a516 in `object_origin_set_exec` as well ``` Object *ob_eval = DEG_get_evaluated_object(depsgraph, ob); BKE_object_transform_copy(ob_eval, ob); BKE_object_where_is_calc(depsgraph, scene, ob_eval); if (ob->type == OB_ARMATURE) { /* needed for bone parents */ BKE_pose_where_is(depsgraph, scene, ob_eval); } ``` but since that seems to be failing for nested relationships (see #66525) I think it makes sense if @Sergey squashes this nastyness for this report as well? (@Sergey: feel free to bounce back -- I just think you will kill it faster....)

This issue was referenced by 4ca054617b

This issue was referenced by 4ca054617ba1552eb06d46f32b5c007632b0dd11
Member

Can confirm doing the above works after d6ebd04bb3 was just in...

Can confirm doing the above works after d6ebd04bb3 was just in...

@lichtwerk, i might solve each individual case faster, but when you take amount of stuff i'll then be going through..
Looking into the patch now.

@lichtwerk, i might solve each individual case faster, but when you take amount of stuff i'll then be going through.. Looking into the patch now.
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66526
No description provided.