Fix T66526: child's objects move if change their origin position

Reviewers: sergey

Maniphest Tasks: T66526

Differential Revision: https://developer.blender.org/D5201